gramatica
<query> ::= SELECT <select_list> FROM <table_list> <where_clause> <order_clause>

<select_list> ::= * | <column> | <column> , <select_list>

<column> ::= <identifier> | <identifier> . <identifier>

<table_list> ::= <table> | <table> , <table_list>

<table> ::= <identifier>

<where_clause> ::= WHERE <condition> | ε

<condition> ::= <expression> <operator> <expression> | <condition> AND <condition> | <condition> OR <condition> | ( <condition> )

<expression> ::= <identifier> | <literal>

<operator> ::= = | != | < | > | <= | >=

<order_clause> ::= ORDER BY <order_list> | ε

<order_list> ::= <order_item> | <order_item> , <order_list>

<order_item> ::= <identifier> [ ASC | DESC ]

<identifier> ::= [a-zA-Z_][a-zA-Z0-9_]+

<literal> ::= [0-9]+ | '.' | "."

<number> ::= [0-9]+
